# envolvigo

./: Cargo.toml  README.md  install_lv2.sh
lv2/: envolvigo.ttl  manifest.ttl  pluginname.ttl
lv2-debug/: envolvigo.ttl  manifest.ttl
plugin/: Cargo.toml
plugin/src/: lib.rs
ui/: Cargo.toml
ui/src/: lib.rs
urids/: Cargo.toml
urids/src/: lib.rs
