[package]
name = "envolvigo-lv2"
version = "0.0.1"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lv2-atom = "1.1.0"

urids = { path = "../urids" }
itertools = "0.9.0"

[dependencies.lv2]
version = "0.5.1"
features = ["lv2-options"]
