[package]
name = "envolvigo-lv2-ui"
version = "0.0.1"
authors = ["Johannes Mueller <github@johannes-mueller.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cascade = "0.1.4"

lv2 = "0.5.1"
lv2-sys = "1.1.0"

cairo-rs = "0.9.0"
pango = "0.9.0"
pangocairo = "0.10.0"

pugl-ui = "0.2.0"
pugl-sys = "0.3.3"

jilar = { git = "https://github.com/johannes-mueller/jilar.git" }

urids = { path = "../urids" }
